--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -42,14 +42,22 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
+
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
   {% include "edicoes.html" %}
 
   <div class="row align-items-start mb-2" style="display: inline-block; margin-right: 3px;">
     <div class="ml-3">
       <div class="input-group input-group-sm">
           <div class="input-group-prepend">
-            <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide">Tipos</span></label>
+            <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide">
+              <span lang="pt">Tipos</span>
+              <span lang="en">Type</span>
+            </span></label>
           </div>
           <select id="tipos" class="selectpicker form-control form-control-sm" data-style="mr-sm border " data-width="10em"
                   title="Nada selecionado"
@@ -243,5 +251,7 @@
   </script>
 
   {% include "janelas-modal.html" %}
+
+  {% include "linguas.html" %}
 
 {% endblock %}
