--- a/administracao/templates/administracao/cadastra_organizacao.html
+++ b/administracao/templates/administracao/cadastra_organizacao.html
@@ -32,28 +32,47 @@
 
 {% block content %}
 
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
   <br>
 
   <form id="organizacaoform" method="post" style="width: 850px; max-width: 100%;" enctype="multipart/form-data"> {% csrf_token %}
     
-    <label for="organizacao">Nome da Organização:<br></label><br>
+    <label for="organizacao">
+      <span lang="pt">Nome da Organização:</span>
+      <span lang="en">Organization Name:</span>
+    </label><br>
     <textarea id="nome" name="nome" rows="1" cols="80" maxlength="{% max_length organizacao "nome" %}" required>{% if organizacao.nome %}{% slice_max_length organizacao "nome" %}{% elif proposta.nome_organizacao %}{% slice_other_max_length proposta.nome_organizacao organizacao "nome" %}{% endif %}</textarea>
     <br><br>
 
-    <label for="sigla">Sigla:</label> <input type="text" size="48" maxlength="{% max_length organizacao "sigla" %}" id="sigla" name="sigla" value="{% if organizacao.sigla %}{% slice_max_length organizacao "sigla" %}{% elif proposta.nome_organizacao %}{% slice_other_max_length_upper proposta.nome_organizacao organizacao "sigla" %}{% endif %}" required><br><br>
+    <label for="sigla">
+      <span lang="pt">Sigla:</span>
+      <span lang="en">Acronym:</span>
+    </label> <input type="text" size="48" maxlength="{% max_length organizacao "sigla" %}" id="sigla" name="sigla" value="{% if organizacao.sigla %}{% slice_max_length organizacao "sigla" %}{% elif proposta.nome_organizacao %}{% slice_other_max_length_upper proposta.nome_organizacao organizacao "sigla" %}{% endif %}" required><br><br>
 
-    <label for="endereco">Endereço:<br></label><br>
+    <label for="endereco">
+      <span lang="pt">Endereço:</span>
+      <span lang="en">Address:</span>
+    </label><br>
     <textarea id="endereco" name="endereco" rows="3" cols="80" maxlength="{% max_length organizacao "endereco" %}">{% if organizacao.endereco %}{% slice_max_length organizacao "endereco" %}{% elif proposta.endereco %}{% slice_other_max_length proposta.endereco organizacao "endereco" %}{% endif %}</textarea>
     <br><br>
 
     <label for="website">website:</label> <input type="text" size="69" maxlength="{% max_length organizacao "website" %}" id="website" name="website" value="{% if organizacao.website %}{% slice_max_length organizacao "website" %}{% elif proposta.website %}{% slice_other_max_length proposta.website organizacao "website" %}{% endif %}" placeholder="https://www.insper.edu.br"><br><br>
 
-    <label for="informacoes">Informações sobre a organização:</label><br>
+    <label for="informacoes">
+      <span lang="pt">Informações sobre a organização:</span>
+      <span lang="en">Information about the organization:</span>
+    </label><br>
     <textarea id="informacoes" name="informacoes" rows="4" cols="80" maxlength="{% max_length organizacao "informacoes" %}">{% if organizacao.informacoes %}{% slice_max_length organizacao "informacoes" %}{% elif proposta.descricao_organizacao %}{% slice_other_max_length proposta.descricao_organizacao organizacao "informacoes" %}{% endif %}</textarea>
     <br><br>
 
-    <label for="logo">Logotipo da organização:</label>
+    <label for="logo">
+      <span lang="pt">Logotipo da organização:</span>
+      <span lang="en">Organization logo:</span>
+    </label>
     {% include "selecionar_arquivo.html" with arquivo_nome="logo" arquivo_accept="image/*" %}
     {% if organizacao and organizacao.logotipo %}
       <br><a href="{{request.scheme}}://{{request.get_host}}{{organizacao.logotipo.url}}">
@@ -72,8 +91,13 @@
     <textarea id="ramo_atividade" name="ramo_atividade" rows="4" cols="80" maxlength="256">{% if organizacao.ramo_atividade%}{{organizacao.ramo_atividade}}{% endif %}</textarea>
     <br><br>
 
-    <input class="btn btn-primary mb-1" type="submit" value="{% if edicao %}Atualizar{% else %}Cadastrar{% endif %} Organização Parceira">
+    <button class="btn btn-primary mb-1" type="submit">
+      <span lang="pt">{% if edicao %}Atualizar{% else %}Cadastrar{% endif %} Organização</span>
+      <span lang="en">{% if edicao %}Update{% else %}Register{% endif %} Organization</span>
+    </button>
     
   </form>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
