--- a/administracao/templates/administracao/carregar.html
+++ b/administracao/templates/administracao/carregar.html
@@ -6,9 +6,26 @@
 {% endcomment %}
 
 {% block content %}
-  <span class="titulo">{{ titulo }}</span>
-  <a href="{% url 'carrega_arquivo' 'disciplinas' %}"><h5>disciplinas</h5></a>
-  <a href="{% url 'carrega_arquivo' 'estudantes' %}"><h5>estudantes</h5></a>
-  <a href="{% url 'carrega_arquivo' 'avaliacoes' %}"><h5>avaliações</h5></a>
+  
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
+
+  <a href="{% url 'carrega_arquivo' 'disciplinas' %}"><h5>
+    <span lang="pt">disciplinas</span>
+    <span lang="en">courses</span>
+  </h5></a>
+  <a href="{% url 'carrega_arquivo' 'estudantes' %}"><h5>
+    <span lang="pt">estudantes</span>
+    <span lang="en">students</span>
+  </h5></a>
+  <a href="{% url 'carrega_arquivo' 'avaliacoes' %}"><h5>
+    <span lang="pt">avaliações</span>
+    <span lang="en">evaluations</span>
+  </h5></a>
   <br><br>
+
+  {% include "linguas.html" %}
+
 {% endblock %}
