--- a/documentos/templates/documentos/exportar_documentos_projetos.html
+++ b/documentos/templates/documentos/exportar_documentos_projetos.html
@@ -12,7 +12,10 @@
 
 {% block content %}
   
-  <span class="titulo">{{ titulo }}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   <form method="POST" id="exportForm">{% csrf_token %}
 
@@ -23,7 +26,9 @@
   
     <div class="atualizar">
 
-      Total de Projetos = {{projetos.count}} 
+      <span lang="pt">Total de Projetos</span>
+      <span lang="en">Total of Projects</span>
+      = {{projetos.count}} 
               
       <script>
         function carrega_pagina() {};
@@ -34,12 +39,19 @@
     </div>
     <br>
 
-    <input type="submit" value="Exportar" class="btn btn-primary" id="exportButton">
-    <small>Após clicar no botão, aguarde o arquivo. Pode demorar vários segundos para o download começar.</small>
+    {% comment %} <input type="submit" value="Exportar" class="btn btn-primary" id="exportButton"> {% endcomment %}
+    <button type="submit" class="btn btn-primary" id="exportButton">
+      <span lang="pt">Exportar</span>
+      <span lang="en">Export</span>
+    </button>
+
+    <small lang="pt">Após clicar no botão, aguarde o arquivo. Pode demorar vários segundos para o download começar.</small>
+    <small lang="en">After clicking the button, wait for the file. It may take several seconds for the download to start.</small>
 
   </form>
 
-
   {% include "edicoes_ajax.html" with tabela='Projetos' com_cursos=True %}
+
+  {% include "linguas.html" %}
   
 {% endblock %}
