--- a/professores/templates/professores/mentorias_tabela.html
+++ b/professores/templates/professores/mentorias_tabela.html
@@ -19,23 +19,16 @@
 
   {% include "impressora.html" %}
 
-  <span class="titulo">Alocação em Mentorias</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   {% include "edicoes.html" %}
 
   <div class="atualizar">
 
-    <div class="table-responsive">
-
-        <table id="BancasTable" class="table table-bordered table-hover table-sm" style="width: auto;">
-          <thead class="table-info">
-            <tr>
-              <th scope="col" style="text-align: center; width:300px;">Nome</th>
-              <th scope="col" style="text-align: center; width:300px;">e-mail</th>
-              <th scope="col" style="text-align: center; width:70px;">Grupos</th>
-              <th scope="col" style="text-align: center; width:auto;">Projetos</th>
-            </tr>
-          </thead>
+    {% include "tabelas_top_ml.html" with tabela="Mentorias" cabecalhos=cabecalhos %}
           {% for membro, mentorias in mentores.items %}
             {% if membro.tipo_de_usuario == 2 or membro.tipo_de_usuario == 4 %}
               <tr class="item" data-user="Insper">
@@ -44,7 +37,9 @@
               <tr class="item" data-user="Externo">
                 <td data-sort="{{membro.get_full_name}}"><a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">{{membro.get_full_name}}</a>
             {% else %}
-              <tr class="item"><td>Erro ao identificar usuário
+              <tr class="item"><td>
+                <span lang="pt">Erro ao identificar usuário</span>
+                <span lang="en">Error identifying user</span>
             {% endif %}</td>
               <td><a href="mailto:{{membro.email}}">{{membro.email}}</a></td>
               <td style="text-align: center;"> 
@@ -55,18 +50,17 @@
               </td>
             </tr>
           {% endfor %}
-        </table>
-        <br>
-
+        </tbody>
+      </table>
     </div>
-
-    <script>
-      function carrega_pagina() {};
-      window.onload = carrega_pagina
-    </script>
-
   </div>
 
-  {% include "edicoes_ajax.html" with tabela='Bancas' %}
+  <script>
+    function carrega_pagina() {};
+    window.onload = carrega_pagina
+  </script>
+
+  {% include "edicoes_ajax.html" with tabela="Mentorias" %}
+  {% include "linguas.html" %}
 
 {% endblock %}
