--- a/projetos/templates/projetos/distribuicao_areas.html
+++ b/projetos/templates/projetos/distribuicao_areas.html
@@ -8,7 +8,6 @@
 {% block head %}
   {% load static %}
   <link href="{% static 'css/horizBarChart.css' %}" media="all" rel="stylesheet" type="text/css" />
-  {% comment %} <script src="{% static 'js/jquery.min.js' %}"></script> {% endcomment %}
   <script src="{% static 'js/jquery.horizBarChart.min.js' %}"></script>
 
   <script>
@@ -107,15 +106,35 @@
         <script>
             // Botao de curso só faz sentido se tipo == estudantes, senão é desabilitado
             $("#filterTipo").change(function() {
-                if($("#filterTipo option:selected").attr("value") == "estudantes") {
-                    $("#filterCurso").removeAttr('disabled');
-                    $("#labelCurso").css('color', 'black');
-                } else {
-                    $("#filterCurso").attr('disabled', 'disabled');
-                    $("#filterCurso").val("todos");
-                    $("#labelCurso").css('color', 'grey');
+                function slideLeft(element) {
+                    element.animate({ 
+                     width: "hide",
+                     paddingLeft: "hide",
+                     paddingRight: "hide",
+                     marginLeft: "hide", 
+                     marginRight: "hide" }, 500);
                 }
+    
+                function slideRight(element) {
+                    element.animate({ 
+                    width: "show",
+                    paddingLeft: "show",
+                    paddingRight: "show", 
+                    marginLeft: "show",
+                    marginRight: "show" }, 500);
+                }
+                
+                if($("#filterTipo option:selected").attr("value") == "estudantes") {
+                    slideRight($("#blocoFilterCurso"));
+                } else {
+                    slideLeft($("#blocoFilterCurso"));
+                }
+
             });
+
+            if ($("#filterTipo option:selected").attr("value") != "estudantes") {
+                $("#blocoFilterCurso").hide();
+            }
         </script> 
 
         {% include "edicoes_ajax.html" with com_cursos=True com_tipo=True %}
