--- a/templates/edicoes.html
+++ b/templates/edicoes.html
@@ -49,7 +49,7 @@
     <div class="ml-3 form-inline">
       {% comment %} <div class="input-group input-group-sm"> {% endcomment %}
         {% if not sem_edicao %}
-        <div class="input-group input-group-sm mt-1">
+        <div  id="blocoFilterEdicao" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterEdicao" onClick="recarregar_pagina()"><span class="to_hide"><span lang="pt">Edição</span><span lang="en" style="display: none;">Edition</span></span></label>
           </div>
@@ -75,7 +75,7 @@
         {% endif %}
 
         {% if com_cursos %}
-        <div class="input-group input-group-sm mt-1">
+        <div id="blocoFilterCurso" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterCurso" onClick="recarregar_pagina()"><span class="to_hide"><span lang="pt">Curso</span><span lang="en" style="display: none;">Program</span></span></label>
           </div>
@@ -104,7 +104,7 @@
         {% endif %}
 
         {% if com_objetivos %}
-        <div class="input-group input-group-sm mt-1">
+        <div id="blocoFilterObjetivo" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend">
             <label class="input-group-text" for="filterObjetivo" onClick="recarregar_pagina()"><span class="to_hide"><span lang="pt">Objetivo de Aprendizagem</span><span lang="en" style="display: none;">Learning Goals</span></span></label>
           </div>
@@ -119,7 +119,7 @@
         {% endif %}
 
         {% if ind_grup %}
-        <div class="input-group input-group-sm mt-1">
+        <div id="blocoFilterIndividuais"  class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend form-check mb-2 mr-sm-2">
             <input class="filter form-check-input" type="checkbox" id="individuais" checked >
             <label class="to_label form-check-label" style="line-height: 1.0;" for="individuais"><span class="to_hide"><span lang="pt">Individuais</span><span lang="en" style="display: none;">Individual</span></label>
@@ -133,7 +133,7 @@
         {% endif %}
 
         {% if so_finais %}
-        <div class="input-group input-group-sm mt-1">
+        <div  id="blocoFilterSoFinais" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend form-check mb-2 mr-sm-2">
             <input class="filter form-check-input" type="checkbox" id="so_finais" checked >
             <label class="to_label form-check-label" style="line-height: 1.0;" for="so_finais"><span class="to_hide"><span lang="pt">Só avaliações finais</span><span lang="en" style="display: none;">Only final grades</span></span></label>
@@ -143,7 +143,7 @@
         {% endif %}
 
         {% if avancados %}
-        <div class="input-group input-group-sm mt-1">
+        <div  id="blocoFilterAvancado" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend form-check mb-2 mr-sm-2">
             <input class="filter form-check-input" type="checkbox" id="avancados" checked >
             <label class="to_label form-check-label" for="avancados"><span class="to_hide"><span lang="pt">Avancados</span><span lang="en" style="display: none;">Advanced</span></span></label>
@@ -153,7 +153,7 @@
         {% endif %}
 
         {% if com_tipos %}
-        <div class="input-group input-group-sm mt-1">
+        <div id="blocoFilterTipo" class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterTipo" onClick="recarregar_pagina()"><span class="to_hide"><span lang="pt">Tipo</span><span lang="en" style="display: none;">Type</span></span></label>
           </div>
@@ -167,7 +167,7 @@
         {% endif %}
 
         {% if com_entregas %}
-          <div class="input-group input-group-sm mt-1">
+          <div id="blocoFilterEntregas" class="input-group input-group-sm mt-1 flex-nowrap">
             <div class="input-group-prepend">
               <label class="input-group-text" for="filterEntregas"><span class="to_hide">Tipo</span></label>
             </div>
