filtro de linguas em propostas

--- a/propostas/templates/propostas/procura_propostas.html
+++ b/propostas/templates/propostas/procura_propostas.html
@@ -326,6 +326,7 @@
           $(".tooltip-inner").remove();
           $(".tooltip-arrow").remove();
           chart();
+          {% include "linguas_ajax.html" %}
         }
         {% include "ajax_default_function.js" %}
     }
