--- a/professores/templates/professores/avaliar_entregas.html
+++ b/professores/templates/professores/avaliar_entregas.html
@@ -52,7 +52,10 @@
 {% endblock %}
 
 {% block content %}
-  <span class="titulo">{{titulo}}</span>
+  <span class="titulo">
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
+  </span>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" with com_entregas=tipos_entregas %}
@@ -64,28 +67,46 @@
         {% if projeto.tem_relatos %}
           <div class="div_arredondado">
 
-            <div class="tresp"><strong>Projeto:</strong> <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
-            {% include "tipo_projeto.html" with com_tipo=False %}</div>
-            <strong>Organização:</strong>
-
+            <div class="tresp">
+              <strong>
+                <span lang="pt">Projeto:</span>
+                <span lang="en">Project:</span>
+              </strong> <a href="{% url 'projeto_completo' projeto.id %}">{{projeto.get_titulo}}</a>
+              {% include "tipo_projeto.html" with com_tipo=False %}
+            </div>
+            <strong>
+              <span lang="pt">Organização:</span>
+              <span lang="en">Organization:</span>
+            </strong>
             {% if projeto.organizacao %}
               <a href="{% url 'organizacao_completo' projeto.organizacao.id %}">{{ projeto.organizacao.nome }}</a>
             {% else %}
-              ORGANIZAÇAO NÃO DEFINIDA
+              <span lang="pt">ORGANIZAÇÃO NÃO DEFINIDA</span>
+              <span lang="en">ORGANIZATION NOT DEFINED</span>
             {% endif %}
             <br>
             {% if edicao == "todas" or edicao == "nenhuma" %}
-              <strong>Semestre:</strong> {{projeto.ano}}.{{projeto.semestre}}<br>
+              <strong>
+                <span lang="pt">Semestre:</span>
+                <span lang="en">Semester:</span>
+              </strong> {{projeto.ano}}.{{projeto.semestre}}<br>
             {% endif %}
-            <strong>Orientador:</strong>
+            <strong>
+              <span lang="pt">Orientador:</span>
+              <span lang="en">Advisor:</span>
+            </strong>
             {% if projeto.orientador %}
               <a href="{% url 'professor_detail' projeto.orientador.id %}">{{projeto.orientador}}</a>
             {% else %}
-              ORIENTADOR NÃO DEFINIDO
+              <span lang="pt">ORIENTADOR NÃO DEFINIDO</span>
+              <span lang="en">ADVISOR NOT DEFINED</span>
             {% endif %}
             <br>
             
-            <strong>Grupo:</strong>
+            <strong>
+              <span lang="pt">Grupo:</span>
+              <span lang="en">Group:</span>
+            </strong>
             {% with alocacoes=projeto.alocacao_set.all %}
               <a href="mailto:{% for alocacao in alocacoes %}{{alocacao.aluno.user.email}}{% if not forloop.last %},{% endif %}{% endfor %}?subject=Capstone%20Insper%20-%20Projeto:%20{{projeto}}&body=Caro{% if alocacoes|length > 1 %}s{% endif %}%20{% for alocacao in alocacoes %}{% if not forloop.first %}{% if forloop.last %}%20e{% else %},{% endif %}%20{% endif %}{{alocacao.aluno.user.get_full_name}}{% endfor %},%0D%0A%0D%0Aatenciosamente,%20{{configuracao.coordenacao.coordenador_email}}%20(coordenação%20Capstone)" target="_blank">
                 <i class="fas fa-mail-bulk"></i>
@@ -106,7 +127,12 @@
               </ul>
             {% endwith %}
 
-            <div style="margin:8px 0px 3px 0px; "><strong>Entregas:</strong></div>
+            <div style="margin:8px 0px 3px 0px; ">
+              <strong>
+                <span lang="pt">Entregas:</span>
+                <span lang="en">Deliveries:</span>
+              </strong>
+            </div>
             {% for item in entregas %}
             {% with dias_ate=item.evento.data_aval|dif_dias_hoje dias=-1 %} {% comment %} Eventos são mostrados duas semanas antes do prazo {% endcomment %}
               <div class="pintern exame{{item.composicao.exame.id}}" {% if not forloop.first %}style="margin-top: 8px;"{% endif %}>
@@ -117,13 +143,18 @@
                     <b>{{item.composicao.exame.titulo}}</b>
                   {% endif %}      
                   {% if item.evento.endDate %}            
-                    <span class="opt_full">[prazo {{ item.evento.endDate|date:"DATE_FORMAT" }}]</span>
-                    <span class="opt_short">[prazo {{ item.evento.endDate|date:"d/m/y" }}]</span>
+                    <span class="opt_full">
+                      <span lang="pt">[prazo </span>
+                      <span lang="en">[deadline </span>
+                      {{ item.evento.endDate|date:"DATE_FORMAT" }}]
+                    </span>
+                    <span class="opt_short">
+                      <span lang="pt">[prazo </span>
+                      <span lang="en">[deadline </span>
+                      {{ item.evento.endDate|date:"d/m/y" }}]
+                    </span>
                   {% endif %}
                 </span>
-                  {% comment %} {% if dias_ate > dias %}lightgrey{% endif %}" {% endcomment %}
-                  {% comment %} <a id="adiciona" class="open-documento data-toggle="tooltip" data-html="true" animation="true"   item.documentos.last {% endcomment %}
-                  {% comment %} onClick="check_prazo('{{item.evento.endDate|date:"Y-m-d"}}T23:59:59');" {% endcomment %}
                 <br>
                 {% if item.composicao.exame.grupo %}
                   <ul style="margin-bottom: 2px; padding-left: 22px;" 
@@ -145,26 +176,39 @@
                            href="{% url 'entrega_avaliar' item.composicao.id projeto.id %}"
                            target="_blank" rel="noopener noreferrer">
                             <span class="fas fa-archive"></span>
-                            Entregue 
+                            <span lang="pt">Entregue</span>
+                            <span lang="en">Delivered</span>
                             <span class="opt_full">{{ documento.data|date:"DATETIME_FORMAT" }}</span>
                             <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
                           </a>
                         {% endif %}
-                        {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">[FORA DO PRAZO]</span>{% endif %}
+                        {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">
+                          <span lang="pt">[FORA DO PRAZO]</span>
+                          <span lang="en">[OVERDUE]</span>
+                        </span>{% endif %}
                         {% if forloop.first%}</b>{% endif %}  
                       </li>
                       {% if item.avaliacoes and item.avaliacoes.first%}
                         {% if documento.data > item.avaliacoes.first.momento %}
-                          <span style="color: red;">Avaliação desatualizada, refazer para a nova entrega!</span>
+                          <span style="color: red;">
+                            <span lang="pt">Avaliação desatualizada, refazer para a nova entrega!</span>
+                            <span lang="en">Evaluation outdated, redo for the new delivery!</span>
+                          </span>
                         {% endif %}
                       {% else %}
                         {% if dias_ate < prazo_avaliar %}
-                          <span style="color: red;">Avaliação pendente!</span>
+                          <span style="color: red;">
+                            <span lang="pt">Avaliação pendente!</span>
+                            <span lang="en">Evaluation pending!</span>
+                          </span>
                         {% endif %}
                       {% endif %}
                     {% empty %}
                       {% if item.composicao.tipo_documento %}
-                        <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>sem arquivos</span><br>
+                        <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+                          <span lang="pt">sem arquivos</span>
+                          <span lang="en">no files</span>
+                        </span><br>
                       {% endif %}
                     {% endfor %}
                   </ul>
@@ -198,21 +242,33 @@
                               <span class="opt_short">{{ documento.data|date:"d/m/y H:i" }}</span>
                             </a>
                           {% endif %}
-                          {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">[FORA DO PRAZO]</span>{% endif %}
+                          {% if documento.data|diff_days:item.evento.endDate > 0 %}<span style="color: red;">
+                            <span lang="pt">[FORA DO PRAZO]</span>
+                            <span lang="en">[OVERDUE]</span>
+                          </span>{% endif %}
                           {% if forloop.first%}</b>{% endif %}  
                         </li>
                         {% if values.avaliacoes and values.avaliacoes.first%}
                           {% if documento.data > values.avaliacoes.first.momento %}
-                            <span style="color: red;">Avaliação desatualizada, refazer para a nova entrega!</span>
+                            <span style="color: red;">
+                              <span lang="pt">Avaliação desatualizada, refazer para a nova entrega!</span>
+                              <span lang="en">Evaluation outdated, redo for the new delivery!</span>
+                            </span>
                           {% endif %}
                         {% else %}
                           {% if dias_ate < prazo_avaliar %}
-                            <span style="color: red;">Avaliação pendente!</span>
+                            <span style="color: red;">
+                              <span lang="pt">Avaliação pendente!</span>
+                              <span lang="en">Evaluation pending!</span>
+                            </span>
                           {% endif %}
                         {% endif %}
                       {% empty %}
                         {% if item.composicao.tipo_documento %}
-                          <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>sem arquivos</span><br>
+                          <span {% if dias_ate > dias %}style="color:lightgrey;"{% endif %}>
+                            <span lang="pt">sem arquivos</span>
+                            <span lang="en">no files</span>
+                          </span><br>
                         {% endif %}
                       {% endfor %}
                     </ul>
@@ -229,7 +285,8 @@
           </div>
         {% endif %}
       {% empty %}
-       Sem alocações de projetos esse semestre.
+        <span lang="pt">Sem alocações de projetos esse semestre.</span>
+        <span lang="en">No project allocations this semester.</span>
       {% endfor %}
     {% endif %}
 
@@ -262,5 +319,6 @@
   </script>
 
   {% include "edicoes_ajax.html" %}
+  {% include "linguas.html" %}
 
 {% endblock %}
