--- a/professores/templates/professores/bancas_alocadas.html
+++ b/professores/templates/professores/bancas_alocadas.html
@@ -107,7 +107,7 @@
     <a href="{% url 'index_professor' %}">página do Professor</a>.
   </div>
   <div lang="en">
-    Note: Professor, to schedule/update an evaluation board, access "Agendar Bancas" in your
+    Note: Professor, to schedule/update an examination board, access "Agendar Bancas" in your
     <a href="{% url 'index_professor' %}">Professor's page</a>.
 
   {% comment %} Sistema de controle de exibição de linguas. {% endcomment %}
