--- a/professores/templates/professores/bancas_index.html
+++ b/professores/templates/professores/bancas_index.html
@@ -15,7 +15,10 @@
 
   <div id="tudo">
 
-    <span class="titulo">{{titulo}}
+    <span class="titulo">
+      <span lang="pt">{{ titulo.pt }}</span>
+      <span lang="en">{{ titulo.en }}</span>
+
       <small class="esconder">
         <a data-toggle="tooltip" data-html="true" animation="true" title="Agenda Nova Banca" class="open-modal"
             data-url="{% url 'bancas_criar' %}" href="{% url 'bancas_criar'%}"> 
@@ -39,5 +42,7 @@
     };
     window.onload = carrega_site
   </script>
+
+  {% include "linguas.html" %}
 
 {% endblock %}
