--- a/administracao/templates/administracao/index_admin.html
+++ b/administracao/templates/administracao/index_admin.html
@@ -12,6 +12,13 @@
 {% endblock %}
 
 {% block content %}
-<span class="titulo">{{titulo}}</span>
-{% include "administracao/administracao.html" %}
+
+  <span class="titulo">
+    <span lang="pt">{{titulo.pt}}</span>
+    <span lang="en">{{titulo.en}}</span>
+  </span>
+
+  {% include "administracao/administracao.html" %}
+  {% include "linguas.html" %}
+  
 {% endblock %}
