--- a/professores/templates/professores/objetivos_rubricas.html
+++ b/professores/templates/professores/objetivos_rubricas.html
@@ -13,10 +13,10 @@
 {% block content %}
 
   <span class="titulo">
-    <span lang="pt">{{ titulo }}</span>
-    <span lang="en">Learning Goals</span>
+    <span lang="pt">{{ titulo.pt }}</span>
+    <span lang="en">{{ titulo.en }}</span>
   </span>
-  
+
   {% for objetivo in objetivos %}
     <div class="border rounded" style="padding: 15px; margin-top: 20px;">
 
